// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polkadotXcm limitedReserveTransferAssets here should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
  "type": "Substrate",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets here should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm limitedReserveTransferAssets parachain should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
  "type": "Substrate",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets parachain should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 2032,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountId32": {
            "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
            "network": null,
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": "USDT",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm limitedReserveTransferAssets x1 should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
  "type": "Substrate",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets x1 should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X1": {
                "PalletInstance": 10,
              },
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm limitedReserveTransferAssets x2 should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
  "type": "Substrate",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets x2 should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": "USDT",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm limitedReserveWithdrawAssets parachain should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveWithdrawAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
  "type": "Substrate",
}
`;

exports[`polkadotXcm limitedReserveWithdrawAssets parachain should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 2032,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountId32": {
            "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
            "network": null,
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2032,
                },
                {
                  "PalletInstance": 10,
                },
              ],
            },
            "parents": 1,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm limitedReserveWithdrawAssets x2 should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveWithdrawAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
  "type": "Substrate",
}
`;

exports[`polkadotXcm limitedReserveWithdrawAssets x2 should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 10,
                },
              ],
            },
            "parents": 1,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;
